# MSD15440-BoatBot

./: .codespell-ignore-words.txt  .gitignore  .pre-commit-config.yaml  README.md  msd15440_craft.ci.repos
craft_bringup/: CMakeLists.txt  README.md  package.xml
craft_bringup/config/: craft_controllers.yaml  test_goal_publishers_config.yaml
craft_bringup/launch/: craft.launch.py  gazebo.craft.launch.py  test_forward_position_controller.launch.py  test_forward_velocity_controller.launch.py  test_joint_trajectory_controller.launch.py
craft_control/: CMakeLists.txt  README.md  craft_control.xml  package.xml
craft_control/include/craft_control/: rudder_servo.hpp  validate_rudder_servo_parameters.hpp  visibility_control.h
craft_control/src/: rudder_servo.cpp  rudder_servo.yaml
craft_control/test/: rudder_servo_params.yaml  rudder_servo_preceeding_params.yaml  test_load_rudder_servo.cpp  test_rudder_servo.cpp  test_rudder_servo.hpp  test_rudder_servo_preceeding.cpp
craft_description/: CMakeLists.txt  README.md  package.xml
craft_description/launch/: view_craft.launch.py
craft_description/meshes/craft/collision/: rudder.stl  servocargoassm.stl
craft_description/meshes/craft/visual/: hullassm.stl  propeller.stl  topassm.stl
craft_description/rviz/: craft.rviz
craft_description/urdf/: craft.urdf.xacro
craft_description/urdf/craft/: craft_macro.ros2_control.xacro  craft_macro.xacro
craft_hardware/: CMakeLists.txt  README.md  craft_hardware.xml  package.xml
craft_hardware/include/craft_hardware/: angular_servo.hpp  craft_hardware.hpp  esc_hardware.hpp  rudderServo.hpp  visibility_control.h
craft_hardware/src/: angular_servo.cpp  craft_hardware.cpp  esc_hardware.cpp  rudderServo.cpp
craft_hardware/test/: test_craft_hardware.cpp  test_esc_hardware.cpp  test_rudderServo.cpp
esc_hardware/: CMakeLists.txt  esc_hardware.xml  package.xml
esc_hardware/include/esc_hardware/: esc.hpp  esc_hardware.hpp  visibility_control.h
esc_hardware/src/: angular_servo.cpp  esc.cpp  esc_hardware.cpp
esc_hardware/test/: test_esc_hardware.cpp
msd15440_craft/: CMakeLists.txt  package.xml
my_r2c_test_nodes/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
ros2_controllers_test_nodes/: CHANGELOG.rst  package.xml  setup.py
ros2_controllers_test_nodes/ros2_controllers_test_nodes/: publisher_forward_velocity_controller.py
twist_to_boat/: package.xml  setup.cfg  setup.py
twist_to_boat/twist_to_boat/: twist_to_boat.py  twist_to_position_node.py
twist_to_position_controller/: package.xml  setup.cfg  setup.py
twist_to_position_controller/launch/: twist_to_position_controller_launch.py
twist_to_position_controller/twist_to_position_controller/: twist_to_position_node.py
