<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>msd15440_craft</name>
  <version>0.0.0</version>
  <description>ROS autonomous boat to seek radio beacon</description>
  <maintainer email="atticusrussell@gmail.com">Atticus Russell</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>craft_control</exec_depend>

  <exec_depend>craft_bringup</exec_depend>

  <exec_depend>craft_description</exec_depend>

 
 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
